nlp/nlp_hw1/v1.0/pytorch_src/logs/test_stage2_log_2019_10_27_13_02_19
  File "generate.py", line 141
    if period_count == 5:
    ^
IndentationError: unexpected indent
